# factory-simulation

./: CMakeLists.txt  README.md
include/: simulator.h
src/: main.cpp  simulator.cpp
